test_suite/tests/ui/enum-representation/untagged-struct.stderr
error: #[serde(untagged)] can only be used on enums
 --> tests/ui/enum-representation/untagged-struct.rs:5:1
  |
5 | struct S;
  | ^^^^^^
